# market-insights-portfolio

./: .gitignore  README.md  pyproject.toml
projects/01_query_log_relevance_detective/: README.md
projects/01_query_log_relevance_detective/notebooks/: 01_sanity_duckdb.ipynb
projects/01_query_log_relevance_detective/notebooks/data/: local.duckdb
projects/01_query_log_relevance_detective/outputs/: daily_kpis.csv  per_query_2006-04-13.csv  per_query_all.csv  top_bad_queries.csv  top_good_queries.csv
projects/01_query_log_relevance_detective/scripts/: build_metrics.py  enrich_docs.py  etl_aol_ia.py
projects/01_query_log_relevance_detective/sql/: 02_query_click_features.sql  03_session_metrics.sql  04_daily_kpis.sql  05_per_query_all.sql  schema.sql  sessionize.sql
projects/02_human_eval_pack/: README.md
projects/02_human_eval_pack/handbook/: evaluator_handbook.md
projects/02_human_eval_pack/labels/: labels_pass1.csv
projects/02_human_eval_pack/scripts/: build_candidates.py  build_eval_set.py  build_judge_items_for_llm.py  build_judge_set.py  etl_beir_scifact.py  eval_metrics.py  export_inspection_rows.py  init_eval_tables.py  init_ollama_tables.py  run_ollama_judge.py
projects/02_human_eval_pack/sql/: 01_candidates_schema.sql  02_sanity_counts.sql  03_eval_join.sql  build_candidates.sql  build_judge_items_for_llm.sql  build_judge_set.sql  eval_metrics.sql  export_inspection.sql  schema_core.sql  schema_eval.sql  schema_ollama.sql
projects/03_data_quality_bouncer/: README.md
shared/scripts/: repo_paths.py
