[project]
name = "market-insights-portfolio"
version = "0.1.0"
description = "Market Insights portfolio projects: query logs, human eval, and data quality."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.0.0",
  "pandas>=2.2.0",
  "pyarrow>=16.0.0",
  "jupyter>=1.0.0",
  "ipykernel>=6.29.0",
  "matplotlib>=3.8.0",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
